# thundr-Models

./: .gitattributes  .gitignore  Dockerfile  README.md  package.json  pyproject.toml
data/: items_thundrbot_1.jsonl  items_thundrbot_9.jsonl  text_pairs_dataset.jsonl  vocab.json
docs/: DEVELOPER_GUIDE.md
models/: imagezap.keras  textzap.keras
notebooks/: image_prep.ipynb  imagezap.ipynb  text_prep.ipynb  textzap.ipynb
public/: index.html  main.js
serve/: main.py
src/ts/: index.ts
tests/py/: test.py
