[project]
name = "thundrmodels"
version = "0.1.0"
description = "Utilities and scripts used to create the thundr textzap and imagezap models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "fastapi[standard]>=0.115.12",
    "ipykernel>=6.29.5",
    "jsonlines>=4.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pillow>=11.2.1",
    "tensorflow[and-cuda]>=2.19.0",
    "uvicorn[standard]>=0.34.2",
]
