[project]
name = "thundrmodels"
version = "0.1.0"
description = "Utilities and scripts used to create the thundr textzap and imagezap models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "easyocr>=1.7.2",
    "fastapi[standard]>=0.115.12",
    "ipykernel>=6.29.5",
    "jsonlines>=4.0.0",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "pillow>=11.2.1",
    "pillow-avif-plugin>=1.5.2",
    "tensorflow[and-cuda]==2.17",
    "uvicorn[standard]>=0.34.2",
]
